Drop transition to avoid button wrapping when resizing

--- a/assets/trix/stylesheets/toolbar.scss
+++ b/assets/trix/stylesheets/toolbar.scss
@@ -32,7 +32,6 @@ trix-toolbar {
       border-bottom: 1px solid #ddd;
       border-radius: 0;
       background: transparent;
-      transition: all 0.2s ease;
 
       &:not(:first-child) {
         border-left: 1px solid #ccc;
